--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.8.6",
     "react-loading-bar": "0.0.7",
     "react-scripts": "3.0.1",
+    "react-toastify": "^5.3.2",
     "tachyons": "^4.11.1"
   },
   "scripts": {
