--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-loading-bar": "0.0.7",
+    "react-loader-spinner": "^2.3.0",
     "react-scripts": "3.0.1",
     "react-toastify": "^5.3.2",
     "tachyons": "^4.11.1"
